# groundgraph

./: .gitignore  .groundgraph.yaml  .specslice.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PRD.md  README.md  README.zh-CN.md  deny.toml  issues.md  issues2.md  rust-toolchain.toml
crates/groundgraph-cli/: Cargo.toml
crates/groundgraph-cli/src/: app.rs  env.rs  exit_code.rs  logging.rs
crates/groundgraph-cli/src/commands/: business_doc.rs  candidate.rs  check.rs  connect.rs  constants.rs  context.rs  contract.rs  dashboard.rs  dead_code.rs  doctor.rs  export.rs  facts.rs  feature_pack.rs  features.rs  graph.rs  graph_diff.rs  graph_equiv.rs  graph_html.rs  graph_mermaid.rs  impact.rs  index.rs  init.rs  install.rs  logic.rs  mod.rs  output.rs  port_coverage.rs  propose.rs  questions.rs  route_coverage.rs  schema_index.rs  search.rs  search_html.rs  select_tests.rs  similar.rs  slice.rs  stats.rs  suggest_tests.rs  trace.rs  (+1 more)
crates/groundgraph-cli/tests/: candidate.rs  check_and_context.rs  commands_e2e.rs  completions.rs  connect.rs  dashboard.rs  dead_code.rs  doctor.rs  exit_codes.rs  export.rs  format_value_enum.rs  graph.rs  groundgraph_brand.rs  help_grouping.rs  human_output.rs  impact.rs  index.rs  index_partial.rs  init.rs  install.rs  search_html.rs  slice.rs  stats.rs  watch.rs  webui_assets.rs
crates/groundgraph-cli/webui/: index.html
crates/groundgraph-core/: Cargo.toml
crates/groundgraph-core/src/: artifact_id.rs  confidence.rs  edge.rs  language_batch.rs  language_traits.rs  lib.rs  node.rs  paths.rs
crates/groundgraph-engine/: Cargo.toml  build.rs
crates/groundgraph-engine/benches/: search_hot.rs
crates/groundgraph-engine/proto/: scip.proto
crates/groundgraph-engine/src/: atomic_write.rs  business_candidates.rs  business_doc.rs  business_pack.rs  c_treesitter.rs  checks.rs  confidence_view.rs  config.rs  connect.rs  constants.rs  context_pack.rs  cpp_treesitter.rs  csharp_treesitter.rs  dart_indexer.rs  dart_sidecar.rs  dart_treesitter.rs  data_contract.rs  dead_code.rs  docs_indexer.rs  edge_confidence.rs  error.rs  export.rs  feature_cluster.rs  feature_map.rs  feature_pack.rs  fulltext_indexer.rs  git_diff.rs  go_indexer.rs  go_treesitter.rs  graph.rs  graph_diff.rs  graph_equiv.rs  impact.rs  index.rs  init.rs  java_indexer.rs  java_treesitter.rs  kotlin_treesitter.rs  lib.rs  links_indexer.rs  (+38 more)
crates/groundgraph-engine/tests/: README.md  breadth_fixtures_golden.rs  check_doc_drift.rs  checks_and_context.rs  code_facts.rs  code_facts_evidence.rs  code_facts_extended.rs  config_schema.rs  connect.rs  dart_indexer.rs  dart_sidecar_acceptance.rs  docs_indexer.rs  end_to_end_paths.rs  engine_typed_error.rs  graph.rs  impact.rs  index_progress.rs  links_manifest.rs  lsp_indexers.rs  p21_rust_self_host.rs  p22_treesitter_multilang.rs  p23_sqlite_grade.rs  p23_totality_proptest.rs  p25_effectiveness_c_redis_patterns.rs  p25_scanner_totality_proptest.rs  p4_pixcraft_golden.rs  p5_search_golden.rs  p7_dead_code_golden.rs  p8_semantic_edges.rs  p9_business_candidates.rs  public_api.rs  requirements_md.rs  scip_proto_compat.rs  search_content_layer.rs  slice.rs  watch.rs
crates/groundgraph-lang-dart/: Cargo.toml
crates/groundgraph-lang-dart/src/: lib.rs  parser.rs  references.rs
crates/groundgraph-mcp/: Cargo.toml
crates/groundgraph-mcp/src/: app.rs  lib.rs  protocol.rs  server.rs
crates/groundgraph-mcp/tests/: cli.rs  groundgraph_brand.rs  protocol.rs
crates/groundgraph-store/: Cargo.toml
crates/groundgraph-store/src/: lib.rs  migrations.rs  repositories.rs
crates/groundgraph-store/tests/: error_paths.rs  migrations.rs  proptest_roundtrip.proptest-regressions  proptest_roundtrip.rs  repositories.rs
crates/specslice-cli/: Cargo.toml
crates/specslice-cli/src/: main.rs
crates/specslice-cli/tests/: candidate.rs  check_and_context.rs  commands_e2e.rs  connect.rs  dashboard.rs  dead_code.rs  export.rs  graph.rs  human_output.rs  impact.rs  index.rs  init.rs  search_html.rs  slice.rs  stats.rs
crates/specslice-core/: Cargo.toml
crates/specslice-core/src/: artifact_id.rs  edge.rs  evidence.rs  language_batch.rs  language_traits.rs  lib.rs  node.rs
crates/specslice-engine/: Cargo.toml
crates/specslice-engine/src/: atomic_write.rs  business_candidates.rs  business_doc.rs  business_pack.rs  c_treesitter.rs  checks.rs  confidence_view.rs  config.rs  connect.rs  constants.rs  context_pack.rs  cpp_treesitter.rs  csharp_treesitter.rs  dart_indexer.rs  dart_sidecar.rs  dart_treesitter.rs  data_contract.rs  dead_code.rs  docs_indexer.rs  edge_confidence.rs  export.rs  feature_cluster.rs  feature_map.rs  feature_pack.rs  fts_text.rs  fulltext_indexer.rs  git_diff.rs  go_indexer.rs  go_treesitter.rs  graph.rs  graph_diff.rs  graph_equiv.rs  impact.rs  index.rs  init.rs  java_ast.rs  java_indexer.rs  java_treesitter.rs  kotlin_treesitter.rs  lib.rs  (+38 more)
crates/specslice-engine/tests/: README.md  check_doc_drift.rs  checks_and_context.rs  code_facts.rs  code_facts_evidence.rs  code_facts_extended.rs  config_schema.rs  connect.rs  dart_indexer.rs  dart_sidecar_acceptance.rs  docs_indexer.rs  end_to_end_paths.rs  graph.rs  impact.rs  links_manifest.rs  lsp_indexers.rs  p21_rust_self_host.rs  p22_treesitter_multilang.rs  p23_sqlite_grade.rs  p23_totality_proptest.rs  p25_effectiveness_c_redis_patterns.rs  p25_scanner_totality_proptest.rs  p4_pixcraft_golden.rs  p5_search_golden.rs  p7_dead_code_golden.rs  p8_semantic_edges.rs  p9_business_candidates.rs  related_links.rs  requirements_md.rs  search_content_layer.rs  slice.rs
crates/specslice-lang-dart/: Cargo.toml
crates/specslice-lang-dart/src/: lib.rs  parser.rs  references.rs
crates/specslice-mcp/: Cargo.toml
crates/specslice-mcp/src/: lib.rs  main.rs  protocol.rs  server.rs
crates/specslice-mcp/tests/: cli.rs  protocol.rs
crates/specslice-store/: Cargo.toml
crates/specslice-store/src/: lib.rs  migrations.rs  repositories.rs
crates/specslice-store/tests/: error_paths.rs  migrations.rs  proptest_roundtrip.rs  repositories.rs
(+186 files in other folders)
