[workspace]
resolver = "2"
members = [
    "crates/groundgraph-core",
    "crates/groundgraph-store",
    "crates/groundgraph-lang-dart",
    "crates/groundgraph-engine",
    "crates/groundgraph-cli",
    "crates/groundgraph-mcp",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
# 1.89 for `File::lock` (concurrent stats append, issues2.md #35).
rust-version = "1.89"
license = "MIT OR Apache-2.0"
repository = "https://github.com/groundgraph/groundgraph"

[workspace.lints.rust]
# GroundGraph is a non-invasive, deterministic indexer. There is no scenario in
# which unsafe Rust is justified here.
unsafe_code = "forbid"

[workspace.lints.clippy]
# Catch narrowing casts that historically caused silent line-number wraps when
# reading mutated SQLite payloads.
cast_possible_truncation = "warn"
cast_sign_loss = "warn"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.13"
# issues.md #227: the CLI is a background indexer, not an interactive tool — it
# never needs clap's ANSI `color` stack (anstream/anstyle/colorchoice/…). Drop
# default features and re-enable only the text/help/error behaviour we rely on.
clap = { version = "4", default-features = false, features = [
    "std",
    "derive",
    "help",
    "usage",
    "error-context",
    "suggestions",
] }
rusqlite = { version = "0.32", features = ["bundled"] }
walkdir = "2"
globset = "0.4"
sha2 = "0.10"
shlex = "1.3"
time = { version = "0.3", features = ["formatting", "macros"] }

# dev-dependencies (shared)
assert_cmd = "2"
predicates = "3"
assert_fs = "1"
tempfile = "3"
insta = { version = "1", features = ["json"] }

# issues.md #80: strip debug info from release binaries. Distributed binaries
# otherwise embed DWARF + the build machine's absolute source paths (a security
# / privacy leak) and ship 5–8 MB larger. "debuginfo" keeps the symbol table so
# panic backtraces still name functions.
[profile.release]
strip = "debuginfo"
