[workspace]
resolver = "2"
members = [
    "crates/groundgraph-core",
    "crates/groundgraph-store",
    "crates/groundgraph-lang-dart",
    "crates/groundgraph-engine",
    "crates/groundgraph-cli",
    "crates/groundgraph-mcp",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
# 1.89 for `File::lock` (concurrent stats append, issues2.md #35).
rust-version = "1.89"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kyanosq/groundgraph"

[workspace.lints.rust]
# GroundGraph is a non-invasive, deterministic indexer. There is no scenario in
# which unsafe Rust is justified here.
unsafe_code = "forbid"

[workspace.lints.clippy]
# Catch narrowing casts that historically caused silent line-number wraps when
# reading mutated SQLite payloads.
cast_possible_truncation = "warn"
cast_sign_loss = "warn"

[workspace.dependencies]
anyhow = "1"
# issues.md #224/#225 — thiserror 2 (not 1) converges the duplicate: rusqlite's
# wasm-only `sqlite-wasm-rs → rsqlite-vfs` chain already pulls thiserror 2, so
# staying on 1 split the graph (thiserror + thiserror-impl both warned). Our
# usage is plain `#[derive(Error)]` / `#[error("{field}")]` / `#[from]` /
# `#[source]` / `#[error(transparent)]`, all unchanged across the 1→2 boundary.
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# issues.md #70 / RUSTSEC-2025-0068: migrated off the unsound + archived
# `serde_yml` onto `serde_norway` — the maintained `serde_yaml` fork the
# RustSec advisory recommends first (backed by the maintained
# `unsafe-libyaml-norway`). `serde_yaml_ng` was rejected because it still
# depends on the unmaintained `unsafe-libyaml`. The public surface we use
# (`from_str` / `to_string` / `Value` / `Mapping`) is the serde_yaml API both
# forks preserve, so the swap is drop-in; byte-stable round-trip behaviour is
# pinned by `business_candidates::tests::candidates_yaml_round_trips_byte_stably_with_special_chars`.
serde_norway = "0.9"
# issues.md #227: the CLI is a background indexer, not an interactive tool — it
# never needs clap's ANSI `color` stack (anstream/anstyle/colorchoice/…). Drop
# default features and re-enable only the text/help/error behaviour we rely on.
clap = { version = "4", default-features = false, features = [
    "std",
    "derive",
    "help",
    "usage",
    "error-context",
    "suggestions",
] }
# #113 — shell-completion generation (`groundgraph completions <shell>`).
# Versioned to match clap 4 so the `Command` AST handed to `generate` lines up.
clap_complete = "4"
# issues.md #213: keep rusqlite on the current line (0.40 here) with `bundled`
# so every machine compiles the same vendored SQLite (libsqlite3-sys), instead
# of linking a distro SQLite whose FTS5/WAL/migration behaviour drifts across
# patch releases and breaks "deterministic indexing". Pinning `Cargo.lock`
# fixes the exact libsqlite3-sys patch for release.
rusqlite = { version = "0.40", features = ["bundled"] }
walkdir = "2"
globset = "0.4"
sha2 = "0.10"
shlex = "1.3"
time = { version = "0.3", features = ["formatting", "macros"] }
# issues.md #127/#230 — structured diagnostics. Engine/store libraries only
# emit events; the CLI installs the subscriber. `env-filter` parses RUST_LOG.
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "std",
    "fmt",
    "ansi",
    "env-filter",
] }
# issues.md #231 — TTY-aware progress reporting for long `index` runs.
# 0.18 (not 0.17): indicatif 0.17 hard-depends on `number_prefix`, which is
# unmaintained (RUSTSEC-2025-0119, no fix available). 0.18 dropped that dep.
indicatif = "0.18"

# dev-dependencies (shared)
assert_cmd = "2"
predicates = "3"
assert_fs = "1"
tempfile = "3"
insta = { version = "1", features = ["json"] }
# issues.md #143/#144/#156: criterion drives the search hot-path bench
# (`crates/groundgraph-engine/benches/search_hot.rs`), giving before/after
# numbers for the search optimisation sprint.
criterion = "0.5"

# issues.md #80: strip debug info from release binaries. Distributed binaries
# otherwise embed DWARF + the build machine's absolute source paths (a security
# / privacy leak) and ship 5–8 MB larger. "debuginfo" keeps the symbol table so
# panic backtraces still name functions.
[profile.release]
strip = "debuginfo"
