[package]
name = "groundgraph-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "GroundGraph command-line interface."

[[bin]]
name = "groundgraph"
path = "src/bin/groundgraph.rs"

[dependencies]
groundgraph-core = { path = "../groundgraph-core", version = "0.3.0" }
groundgraph-store = { path = "../groundgraph-store", version = "0.3.0" }
groundgraph-engine = { path = "../groundgraph-engine", version = "0.3.0" }
groundgraph-lang-dart = { path = "../groundgraph-lang-dart", version = "0.3.0" }
anyhow = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
indicatif = { workspace = true }

# Restores default SIGPIPE handling (encapsulates the required `unsafe` so this
# crate stays under the workspace `unsafe_code = "forbid"` policy).
sigpipe = "0.1"

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
assert_fs = { workspace = true }
tempfile = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
