[package]
name = "groundgraph-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types for GroundGraph: artifact nodes, edge assertions, evidence."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_norway = { workspace = true }

[lints]
workspace = true
