[package]
name = "groundgraph-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "GroundGraph engine: config, indexing, slice, impact, checks, context, export."

[dependencies]
groundgraph-core = { path = "../groundgraph-core", version = "0.2.0" }
groundgraph-store = { path = "../groundgraph-store", version = "0.2.0" }
groundgraph-lang-dart = { path = "../groundgraph-lang-dart", version = "0.2.0" }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
rusqlite = { workspace = true }
walkdir = { workspace = true }
globset = { workspace = true }
ignore = "0.4"
sha2 = { workspace = true }
shlex = { workspace = true }
time = { workspace = true }
tree-sitter = "0.26.9"
tree-sitter-rust = "0.24.2"
tree-sitter-go = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-python = "0.25.0"
tree-sitter-c = "0.24.2"
tree-sitter-cpp = "0.23.4"
tree-sitter-java = "0.23.5"
tree-sitter-swift = "0.7.2"
tree-sitter-dart = "0.0.4"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-ruby = "0.23.1"
tree-sitter-php = "0.24.2"
tree-sitter-kotlin-ng = "1.1.0"
scip = "0.8"
protobuf = "3"
rayon = "1.12.0"
tempfile = { workspace = true }

[dev-dependencies]
proptest = "1.11.0"

[lints]
workspace = true
