[package]
name = "groundgraph-lang-dart"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Lightweight Dart language adapter for GroundGraph."

[dependencies]
groundgraph-core = { path = "../groundgraph-core", version = "0.3.1" }
anyhow = { workspace = true }
walkdir = { workspace = true }
sha2 = { workspace = true }

[lints]
workspace = true
