[package]
name = "groundgraph-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "GroundGraph MCP (Model Context Protocol) stdio server."

[[bin]]
name = "groundgraph-mcp"
path = "src/bin/groundgraph-mcp.rs"

[lib]
name = "groundgraph_mcp"
path = "src/lib.rs"

[dependencies]
groundgraph-core = { path = "../groundgraph-core", version = "0.3.1" }
groundgraph-store = { path = "../groundgraph-store", version = "0.3.1" }
groundgraph-engine = { path = "../groundgraph-engine", version = "0.3.1" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_norway = { workspace = true }
# issues.md #230 — mcp server diagnostics route through tracing (stderr).
# The server installs its own subscriber; stdout is reserved for JSON-RPC.
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
