[package]
name = "groundgraph-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "SQLite-backed graph store for GroundGraph."

[dependencies]
groundgraph-core = { path = "../groundgraph-core", version = "0.3.0" }
anyhow = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = "1.11.0"

[lints]
workspace = true
