[package]
name = "specslice-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "SpecSlice command-line interface."

[[bin]]
name = "specslice"
path = "src/main.rs"

[dependencies]
specslice-core = { path = "../specslice-core" }
specslice-store = { path = "../specslice-store" }
specslice-engine = { path = "../specslice-engine" }
specslice-lang-dart = { path = "../specslice-lang-dart" }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Restores default SIGPIPE handling (encapsulates the required `unsafe` so this
# crate stays under the workspace `unsafe_code = "forbid"` policy).
sigpipe = "0.1"

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
assert_fs = { workspace = true }
tempfile = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
