[package]
name = "specslice-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "SpecSlice engine: config, indexing, slice, impact, checks, context, export."

[dependencies]
specslice-core = { path = "../specslice-core" }
specslice-store = { path = "../specslice-store" }
specslice-lang-dart = { path = "../specslice-lang-dart" }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
rusqlite = { workspace = true }
walkdir = { workspace = true }
globset = { workspace = true }
sha2 = { workspace = true }
time = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
