[package]
name = "specslice-lang-dart"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Lightweight Dart language adapter for SpecSlice."

[dependencies]
specslice-core = { path = "../specslice-core" }
anyhow = { workspace = true }
walkdir = { workspace = true }
sha2 = { workspace = true }

[lints]
workspace = true
