[package]
name = "specslice-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "SpecSlice MCP (Model Context Protocol) stdio server."

[[bin]]
name = "specslice-mcp"
path = "src/main.rs"

[lib]
name = "specslice_mcp"
path = "src/lib.rs"

[dependencies]
specslice-core = { path = "../specslice-core" }
specslice-store = { path = "../specslice-store" }
specslice-engine = { path = "../specslice-engine" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
